--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -1,6 +1,6 @@
 <div class="view">
     <input class="toggle" type="checkbox" <%= completed ? 'checked' : '' %>>
-    <label><%= title %></label>
+    <label><%= title %> <span class="timestamp"></span></label>
     <button class="destroy"></button>
 </div>
 <input class="edit" value="<%- title %>">
